--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #fff1a0;
+  background-color: #ff6c3b;
   color: white;
   display: flex;
   justify-content: space-between;
